Fix spacing of home page images on mobile

--- a/src/main/content/_assets/css/home.css
+++ b/src/main/content/_assets/css/home.css
@@ -502,9 +502,9 @@
         margin-top: 100px;
     }
 
-    #collaborate_community_images > img {
-        width: 375px;
-        height: 350px;
+    #collaborate_community_ufo, #collaborate_community_clouds {
+        width: 300px;
+        margin: auto;
     }
 
     #collaborate_community_ufo {
